--- a/roles/system_update/tasks/precheck.yml
+++ b/roles/system_update/tasks/precheck.yml
@@ -5,7 +5,9 @@
 - name: Check available disk space on root partition
   # Why shell: ansible.builtin.stat doesn't provide disk space info
   # Command breakdown: df -m (MB units) | tail -1 (data line only) | awk (extract available column)
-  ansible.builtin.shell: df -m / | tail -1 | awk '{print $4}'
+  ansible.builtin.shell: set -o pipefail && df -m / | tail -1 | awk '{print $4}'
+  args:
+    executable: /bin/bash
   register: root_free_space_mb
   changed_when: false
   check_mode: false
@@ -13,7 +15,9 @@
 
 - name: Check available disk space on /var
   # /var needs space for APT cache and package downloads
-  ansible.builtin.shell: df -m /var | tail -1 | awk '{print $4}'
+  ansible.builtin.shell: set -o pipefail && df -m /var | tail -1 | awk '{print $4}'
+  args:
+    executable: /bin/bash
   register: var_free_space_mb
   changed_when: false
   check_mode: false
@@ -23,28 +27,32 @@
   ansible.builtin.fail:
     msg: |
       ❌ Insufficient disk space for safe updates
-      
+
       Current status:
         / partition:    {{ root_free_space_mb.stdout }} MB available
         /var partition: {{ var_free_space_mb.stdout }} MB available
-      
+
       Required: {{ system_update_min_free_space_mb | default(1024) }} MB per partition
-      
+
       Why: APT needs space for downloading packages and unpacking files.
             Insufficient space can cause partial updates and system instability.
-      
+
       💡 Actions you can take:
         1. Clean APT cache: sudo apt-get clean
         2. Remove old packages: sudo apt-get autoremove
         3. Check large files: sudo du -sh /var/* | sort -h
         4. Increase disk space or adjust 'system_update_min_free_space_mb' variable
   when: >
-    (root_free_space_mb.stdout | int) < (system_update_min_free_space_mb | default(1024)) or
-    (var_free_space_mb.stdout | int) < (system_update_min_free_space_mb | default(1024))
+    (root_free_space_mb.stdout | int) <
+    (system_update_min_free_space_mb | default(1024)) or
+    (var_free_space_mb.stdout | int) <
+    (system_update_min_free_space_mb | default(1024))
   tags: precheck
 
 - name: Check if dpkg/apt is locked
   ansible.builtin.shell: lsof /var/lib/dpkg/lock-frontend 2>/dev/null || true
+  args:
+    executable: /bin/bash
   register: dpkg_lock_check
   changed_when: false
   check_mode: false
@@ -61,7 +69,9 @@
   tags: precheck
 
 - name: Check for held packages
-  ansible.builtin.shell: dpkg --get-selections | grep 'hold$' || true
+  ansible.builtin.shell: set -o pipefail && dpkg --get-selections | grep 'hold$' || true
+  args:
+    executable: /bin/bash
   register: held_packages
   changed_when: false
   check_mode: false
@@ -69,13 +79,14 @@
 
 - name: Display held packages (if any)
   ansible.builtin.debug:
-    msg: "The following packages are held and will not be updated: {{ held_packages.stdout_lines }}"
+    msg: >-
+      The following packages are held and will not be updated:
+      {{ held_packages.stdout_lines }}
   when: held_packages.stdout_lines | length > 0
   tags: precheck
 
-- name: Check APT sources validity
+- name: Verify APT configuration validity
   ansible.builtin.command: apt-get check
   changed_when: false
   check_mode: false
   tags: precheck
-
