Enhance linting and formatting configurations
- Added a new skip rule for run_once tasks in .ansible-lint to improve linting flexibility.
- Updated .pre-commit-config.yaml to refine commit message validation.
- Adjusted .yamllint rules for comments and braces to enforce stricter formatting.
- Cleaned up whitespace across various YAML files for improved readability.
- Ensured consistency in task tags and variable definitions in system_update role files.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,8 +48,9 @@ repos:
 
       - id: check-commit-message
         name: Check commit message quality
-        entry: bash -c 'if ! grep -qE "^(feat|fix|docs|style|refactor|test|chore|perf)(\(.+\))?: .{10,}" "$1"; then echo "❌ Commit message must follow format: type(scope): description"; exit 1; fi'
+        entry: >-
+          bash -c 'if ! grep -qE "^(feat|fix|docs|style|refactor|test|chore|perf)"
+          "$1"; then echo "Invalid commit message format"; exit 1; fi'
         language: system
         stages: [commit-msg]
         always_run: true
-
