Add environment variable for Ansible in Molecule configuration
- Introduced ANSIBLE_ALLOW_BROKEN_CONDITIONALS environment variable to the Molecule provisioner settings to allow for broken conditionals during testing.
- This change enhances the flexibility of the testing process in the system_update role.

--- a/roles/system_update/molecule/default/molecule.yml
+++ b/roles/system_update/molecule/default/molecule.yml
@@ -63,6 +63,8 @@ platforms:
 
 provisioner:
   name: ansible
+  env:
+    ANSIBLE_ALLOW_BROKEN_CONDITIONALS: "True"
   config_options:
     defaults:
       callbacks_enabled: profile_tasks,timer
