--- a/roles/system_update/molecule/default/prepare.yml
+++ b/roles/system_update/molecule/default/prepare.yml
@@ -2,7 +2,7 @@
 - name: Prepare
   hosts: all
   become: true
-  gather_facts: false
+  gather_facts: true
 
   tasks:
     - name: Update apt cache (Debian/Ubuntu)
@@ -10,9 +10,3 @@
         update_cache: true
         cache_valid_time: 600
       when: ansible_facts.os_family == "Debian"
-
-    - name: Install needs-restarting utility (RedHat)
-      ansible.builtin.package:
-        name: yum-utils
-        state: present
-      when: ansible_facts.os_family == "RedHat"
