--- a/roles/system_update/molecule/default/molecule.yml
+++ b/roles/system_update/molecule/default/molecule.yml
@@ -69,6 +69,7 @@ provisioner:
     defaults:
       callbacks_enabled: profile_tasks,timer
       stdout_callback: yaml
+      roles_path: "${MOLECULE_PROJECT_DIRECTORY}/.."
   inventory:
     group_vars:
       all:
